InvoicingAssignment/src/objects/Invoice_Line__c.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice_Header__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selling_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selling Item</label>
        <referenceTo>Selling_Item__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Quantity__c *  ( Unit_Price__c - Unit_Price__c *  Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <formula>Selling_Item__r.Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isNotFack__c</fullName>
        <label>isNotFack</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Invoice Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>